<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_ssid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/dialog_ssid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/network_name" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/dialog_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword">

            <requestFocus />
        </EditText>

    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/dialog_show_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_password" />
</LinearLayout>